--- a/Server/config.env
+++ b/Server/config.env
@@ -5,7 +5,7 @@ MSSQL_HOST = DESKTOP-7EUOQQ8\BUITANHIEU
 MSSQL_PORT = 1433
 MSSQL_USER = sa
 MSSQL_PASS = 123
-MSSQL_DB = TNCShop
+MSSQL_DB = TPhone
 PORT=3000
 
 JWT_SECRET=123456
